--- a/Arachnophobia/Assembly-CSharp-vs.csproj
+++ b/Arachnophobia/Assembly-CSharp-vs.csproj
@@ -46,9 +46,14 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BookController.cs" />
+     <Compile Include="Assets\Scripts\BookController.cs" />
      <Compile Include="Assets\Scripts\EnemySpawner.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\LoadScene.cs" />
      <Compile Include="Assets\Scripts\PauseController.cs" />
+     <Compile Include="Assets\Scripts\Platformer2DUserControl.cs" />
+     <Compile Include="Assets\Scripts\PlatformerCharacter2D.cs" />
      <Compile Include="Assets\Scripts\SpiderExplode.cs" />
      <Compile Include="Assets\Scripts\SpiderJumpingWalk.cs" />
      <Compile Include="Assets\Scripts\SpiderWalk.cs" />
