--- a/Arachnophobia/Assembly-CSharp.csproj
+++ b/Arachnophobia/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ExplosionHelper.cs" />
      <Compile Include="Assets\Scripts\BookController.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\EnemySpawner.cs" />
