--- a/Arachnophobia/Assembly-CSharp.csproj
+++ b/Arachnophobia/Assembly-CSharp.csproj
@@ -52,10 +52,12 @@
      <Compile Include="Assets\Scripts\BossController.cs" />
      <Compile Include="Assets\Scripts\BossSpawnWebBall.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\DeathController.cs" />
      <Compile Include="Assets\Scripts\DisplayKills.cs" />
      <Compile Include="Assets\Scripts\DisplayLives.cs" />
      <Compile Include="Assets\Scripts\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\ExplosionHelper.cs" />
+     <Compile Include="Assets\Scripts\HealthCounter.cs" />
      <Compile Include="Assets\Scripts\LoadScene.cs" />
      <Compile Include="Assets\Scripts\PauseController.cs" />
      <Compile Include="Assets\Scripts\Platformer2DUserControl.cs" />
