--- a/Arachnophobia/Assembly-CSharp.csproj
+++ b/Arachnophobia/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\DisplayLives.cs" />
      <Compile Include="Assets\Scripts\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\ExplosionHelper.cs" />
+     <Compile Include="Assets\Scripts\HealthCounter.cs" />
      <Compile Include="Assets\Scripts\LoadScene.cs" />
      <Compile Include="Assets\Scripts\PauseController.cs" />
      <Compile Include="Assets\Scripts\Platformer2DUserControl.cs" />
