--- a/Arachnophobia/Assembly-CSharp-vs.csproj
+++ b/Arachnophobia/Assembly-CSharp-vs.csproj
@@ -46,10 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ArmDamageEnd.cs" />
-     <Compile Include="Assets\ArmRamController.cs" />
      <Compile Include="Assets\Scripts\ArmDamageEnd.cs" />
      <Compile Include="Assets\Scripts\ArmRamController.cs" />
+     <Compile Include="Assets\Scripts\ArmSquishController.cs" />
      <Compile Include="Assets\Scripts\BookController.cs" />
      <Compile Include="Assets\Scripts\BossController.cs" />
      <Compile Include="Assets\Scripts\BossSpawnWebBall.cs" />
@@ -66,7 +65,6 @@
      <Compile Include="Assets\Scripts\PlatformerCharacter2D.cs" />
      <Compile Include="Assets\Scripts\PlayerExplode.cs" />
      <Compile Include="Assets\Scripts\SJWalk.cs" />
-     <Compile Include="Assets\Scripts\SeekandSmash.cs" />
      <Compile Include="Assets\Scripts\SpiderExplode.cs" />
      <Compile Include="Assets\Scripts\SpiderJumpingWalk.cs" />
      <Compile Include="Assets\Scripts\SpiderWalk.cs" />
@@ -75,7 +73,6 @@
      <Compile Include="Assets\Scripts\TallSpiderWalk.cs" />
      <Compile Include="Assets\Scripts\WeakSpot.cs" />
      <Compile Include="Assets\Scripts\WebBall.cs" />
-     <Compile Include="Assets\WeakSpot.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
