Minor change to spawn script + main game

--- a/Arachnophobia/Assembly-CSharp-Editor-vs.csproj
+++ b/Arachnophobia/Assembly-CSharp-Editor-vs.csproj
@@ -91,6 +91,8 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
       <Project>{48FBFF41-D361-5EED-B5B8-92A6B30D477A}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp-vs.csproj">
+      <Project>{DD7CA504-F890-2FD2-D324-ECC91DB69762}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
